# ConanComponents

./: .gitignore  README.md  pyproject.toml
bar/: CMakeLists.txt  conanfile.py  pyproject.toml
bar/bara/include/: bara.hpp
bar/bara/source/: bara.cpp
bar/barb/include/: barb.hpp
bar/barb/source/: barb.cpp
bar/source/: bar.cpp
baz/: CMakeLists.txt  conanfile.py
baz/include/: baz.hpp
baz/source/: baz.cpp
foo/: CMakeLists.txt  CMakePresets.json  conanfile.py
foo/source/: foo.cpp
qux/: CMakeLists.txt  conanfile.py
qux/quxa/include/: quxa.hpp
qux/quxa/source/: quxa.cpp
qux/quxb/include/: quxb.hpp
qux/quxb/source/: quxb.cpp
test/: CMakeLists.txt  main.cpp
test_components/: CMakeLists.txt  conanfile.txt  conanfile_backup.py  main.cpp
test_transitive/: CMakeLists.txt  conanfile.txt  conanfile_backup.py  main.cpp
waldo/: CMakeLists.txt
waldo/include/: waldo.hpp
waldo/source/: waldo.cpp
